# WebMMD

./: .gitignore  .gitmodules  .prettierignore  CHANGELOG.md  Cargo.toml  NOTICE.md  README.md  THIRD_PARTY_NOTICES.md  eslint.config.js  global.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  verify_rendering.js  vitest.config.ts
.github/workflows/: deploy.yml
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: manifest.json  sw.js
apps/web/src/: main.ts
apps/web/src/app/: shell.ts
apps/web/src/components/: inspector.ts
apps/web/src/workers/: parser.worker.ts  zip.worker.ts
crates/webmmd-core/: Cargo.toml
crates/webmmd-core/src/: lib.rs
crates/webmmd-core/src/math/: mat4.rs  mod.rs  quat.rs  vec3.rs  vec4.rs
crates/webmmd-core/src/packing/: mod.rs
crates/webmmd-core/src/pmx/: mod.rs  reader.rs  types.rs
crates/webmmd-core/src/runtime/: mod.rs
crates/webmmd-core/src/validation/: mod.rs
crates/webmmd-core/tests/: parser_tests.rs
crates/webmmd-wasm/: Cargo.toml
crates/webmmd-wasm/src/: lib.rs
docs/architecture/: coordinate-system.md
docs/spec-notes/: 0.1.2-deformation-runtime.md  0.1.3-reliability-deployment.md
docs/testing/: 0.1.3-test-report.md  0.1.4-rendering-regression-analysis.md  pre-0.1.1-baseline.md
scripts/: build-wasm.mjs  extract_zip.py  prepare-test-fixtures.mjs  run-safari-tests.mjs
