[package]
name = "webmmd-wasm"
version = "0.1.2"
edition = "2021"
authors = ["Google DeepMind Team"]
license = "AGPL-3.0-or-later"
description = "WebAssembly bindings for WebMMD core parser and runtime"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webmmd-core = { path = "../webmmd-core" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
